# pac

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
benchmark/: clickbench_results.csv  pac_clickhouse_benchmark.cpp  pac_tpch_compiler_benchmark.cpp  plot_tpch_results.R  utility_tpch.sql
benchmark/clickbench/: clickbench_micro_results.csv  clickbench_results.csv  pac_clickhouse_benchmark.cpp  pac_clickhouse_benchmark.hpp  plot_clickbench_results.R  run_utility_clickbench_100.sh
benchmark/clickbench/clickbench_queries/: load.sql  queries.sql  setup.sql  utility.sql
benchmark/pac_microbench/: plot_microbenchmark.R
benchmark/sqlstorm/: pac_sqlstorm_benchmark.cpp  pac_sqlstorm_benchmark.hpp  pac_stackoverflow_schema.sql  plot_sqlstorm_degradation.R
benchmark/tpch/: pac_tpch_benchmark.cpp  pac_tpch_benchmark.hpp  pac_tpch_compiler_benchmark.cpp  pac_tpch_compiler_benchmark.hpp  pac_tpch_schema.sql  plot_tpch_results.R  plot_utility.R  run_utility_tpch_100.sh  run_utility_tpch_100.sql  tpch_benchmark_results_sf01.csv  tpch_benchmark_results_sf1.csv  tpch_benchmark_results_sf10.csv  tpch_benchmark_results_sf30.csv  tpch_sf30_macbook.csv
benchmark/tpch/tpch_pac_naive_queries/: q01.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q12.sql  q13.sql  q14.sql  q15.sql  q17.sql  q19.sql  q20.sql  q21.sql  q22.sql
benchmark/tpch/tpch_pac_queries/: q01.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08-nolambda.sql  q08.sql  q09.sql  q12.sql  q13.sql  q14-nolambda.sql  q14.sql  q15.sql  q17-nofuse.sql  q17-nolambda.sql  q17.sql  q19.sql  q20-nofuse.sql  q20-nolambda.sql  q20.sql  q21.sql  q22-nofuse.sql  q22-nolambda.sql  q22.sql
benchmark/tpch/tpch_pac_simple_hash_queries/: q01.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q12.sql  q13.sql  q14.sql  q15.sql  q17.sql  q19.sql  q20.sql  q21.sql  q22.sql
benchmark/tpch/tpch_pacdb_queries/: q01.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q12.sql  q13.sql  q14.sql  q15.sql  q17.sql  q19.sql  q20.sql  q21.sql  q22.sql
benchmark/tpch_pac_queries/: q15.sql
benchmark/utility_listtransform/: plot.R  results_grouped.csv  run_grouped.sh
docs/: README.md
docs/benchmark/: README.md  microbenchmarks.md  tpch.md  utility.md
docs/pac/: README.md  functions.md  pac_functions.md  pac_parser.md  ptracking.md  query_operators.md  runtime_checks.md  syntax.md  utility.md
docs/test/: README.md
src/aggregates/: pac_aggregate.cpp  pac_count.cpp  pac_distinct.cpp  pac_min_max.cpp  pac_sum.cpp
src/categorical/: pac_categorical.cpp  pac_categorical_detection.cpp  pac_categorical_rewriter.cpp
src/compiler/: pac_bitslice_compiler.cpp  pac_compiler_helpers.cpp
src/core/: pac_extension.cpp  pac_optimizer.cpp
src/diff/: pac_utility_summary.cpp
src/include/: pac_debug.hpp
src/include/aggregates/: pac_aggregate.hpp  pac_count.hpp  pac_distinct.hpp
src/metadata/: pac_compatibility_check.cpp
src/parser/: pac_parser.cpp  pac_parser_helpers.cpp
src/query_processing/: pac_avg_rewriter.cpp  pac_expression_builder.cpp  pac_plan_traversal.cpp  pac_subquery_handler.cpp  pac_topk_rewriter.cpp
src/test/: test_pac_parser.cpp  test_runner.cpp  test_schema_metadata.cpp
src/utils/: pac_helpers.cpp
test/sql/: pac_avg.test  pac_bitslice_compiler_correlated_subqueries.test  pac_bitslice_compiler_fk.test  pac_bitslice_compiler_no_pk.test  pac_bitslice_compiler_pk.test  pac_bitslice_compiler_uncorrelated_subqueries.test  pac_categorical_lambda.test  pac_categorical_subqueries.test  pac_compatible.test  pac_count.test  pac_counters.test  pac_cte.test  pac_links.test  pac_min_max.test  pac_multi_pu.test  pac_parser.test  pac_plan.test  pac_projection_lambda.test  pac_robustness.test  pac_sum.test  pac_topk.test  pac_utility_diff.test
(+15 files in other folders)
